--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frog Animation</title>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="styles/main.css" />
-    <script src="index.js"></script>
+
   </head>
   <body>
     <div class="container" id="container">
@@ -18,6 +17,7 @@
       </div>
       <div id="wrapper">
         <div id="pulsingheart"></div>
+        <span id="pulsingText">Ur amazing AmeGod! Love u</span>
       </div>
     </div>
     <p class="advice">Click on the frog</p>
